Changed issues with footer text causing background color to look uneven

--- a/assets/css/blackwhiteredallover.css
+++ b/assets/css/blackwhiteredallover.css
@@ -60,14 +60,14 @@ td.skills-title {
     color: #111;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     line-height: 1.1;
 }
 td.skills-list {
     color: #111;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: normal;
     text-align: left;
 }
 /*****COURSEWORK*****/
@@ -82,7 +82,7 @@ ul.courses {
     color: #111;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: normal;
 }
 /*****WORK*****/
 h2#work-h {
@@ -96,9 +96,9 @@ table#work-table {
     color: #111;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: normal;
 }
-/*****RESEARCH*****/
+/*****PROJECT EXPERIENCE*****/
 h2#projects-h {
     color: #111;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -110,18 +110,22 @@ ul.project-list {
     color: #111;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
-    font-weight: bold;
+    /*font-weight: normal;*/
     text-align: left;
+}
+span.project-title {
+    font-weight: 900;
 }
 /*****FOOTER*****/
 .footer-box {
     background: #990000;
     color: #fff;
-    font-family: sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: normal;
     letter-spacing: 2px;
-    line-height: 1.1;
+    line-height: 1.2;
+    padding-top: 3px;
     text-align: center;
     text-transform: uppercase;
 }
